[package]
name = "async-graphql"
version = "1.18.2"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "A GraphQL server library implemented in Rust"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[features]
default = ["bson", "url", "chrono-tz"]

[dependencies]
async-graphql-derive = { path = "derive", version = "1.18" }
async-graphql-parser = { path = "parser", version = "1.18" }

async-stream = "0.2"
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
fnv = "1.0"
futures = "0.3"
http = "0.2"
httparse = "1.3"
indexmap = "1.3"
itertools = "0.9"
log = "0.4"
multer = "1.2"
once_cell = "1.3"
parking_lot = "0.10"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"
spin = "0.5"
tempfile = "3.1"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }

bson = { version = "1.0", optional = true }
url = { version = "2.1", optional = true }
chrono-tz = { version = "0.5", optional = true }


[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
serde = "1.0"
serde_derive = "1.0"


[patch.crates-io]
## pinned because master supports tokio1/bytes1 which isn't part of any release yet.
multer = { git = "https://github.com/rousan/multer-rs.git", rev = "16e975fc38bc6f4b970ad980d52a0d01db731f9e" }

[workspace]
members = [
    "parser",
    "derive",
    "integrations/warp",
]
