[package]
name = "async-graphql-sdl"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql-parser = { path = "../async-graphql-parser", verion = "0.5.0" }
anyhow = "1.0.31"
itertools = "0.9.0"
proc-macro2 = "1.0.6"
quote = "1.0.3"
Inflector = "0.11.4"
syn = { version = "1.0.20", features = ["full", "extra-traits"] }
