[package]
name = "async-graphql-warp"
version = "1.18.2"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "async-graphql for warp"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "../..", version = "1.18" }
warp = "0.3"
futures = "0.3"
bytes = "1.0"
serde_json = "1.0"
hyper = "0.14"
serde_urlencoded = "0.6"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
